welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:3: error: not found: value setCouleurBuggle
	setCouleurBuggle(Color.black);
        ^MethodsDogHouse:4: error: not found: value Color
	setCouleurBrosse(Color.red);
                         ^