welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
def dogHouse() {
	setCouleurBuggle(Color.black);
	setCouleurBrosse(Color.red);
	for (i <- 1 to 4) {
		avance(2);
		gauche();
	}

	
}
